--- a/(2023) Magic Lantern/01. The Portrait of Summer.md
+++ b/(2023) Magic Lantern/01. The Portrait of Summer.md
@@ -4,17 +4,17 @@ await dv.view('_script');
 夏の肖像 | Natsu no Shouzou | Chân dung của mùa hè
 #### Lyrics
 
-| Japanese                                                                                                                                                       | Romanji                                                                                                                                                                                                                                                                                               | [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ/)                                                                                                                                                                                                                                                                         | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                                                    |
-| -------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは夏の木漏れ日のよう                                                                                         | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa natsu no komorebi no you                                                                                                                                                               | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>It's like the summer sunlight filtering through the leaves                                                                                                                                                                                                                    | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè                                                                                                                                                                                              |
-| 寂しい雨上がり、花を見つけて<br><br>ぽっかり空いたような貴方の心<br><br>少しだけ歩こうか　風の吹く間に<br><br>草のそよげば何となく誰かを待つ                                                                             | Sabishii ameagari, hana wo mitsukete<br><br>Pokkari aita you na anata no kokoro<br><br>Sukoshi dake arukou ka kaze no fuku ma ni<br><br>Kusa no soyogeba nanto naku dareka wo matsu                                                                                                                   | After a lonely rain, finding a flower<br><br>Your heart is completely empty<br><br>Why don't we walk a little, the wind blows all the while<br><br>While the grass sways, for some reason I'm waiting for someone                                                                                                                                                        | Sau cơn mưa buồn thinh, em tìm thấy một bông hoa<br><br>Trái tim em trống vắng như thủng một lỗ<br><br>Hay ta đi dạo một chút khi gió đang thổi nhé?<br><br>Đồng cỏ lao xao như đang chờ đợi ai đó                                                                                                                                                                   |
-| 忘れるたびに増やすことが悲しいのでしょう                                                                                                                                           | Wasureru tabi ni fuyasu koto ga kanashii no deshou                                                                                                                                                                                                                                                    | The ever-increasing amount of things you forget must be sad right?                                                                                                                                                                                                                                                                                                       | Mỗi lần quên đi chỉ có nỗi buồn là tăng lên, đúng không em?                                                                                                                                                                                                                                                                                                          |
-| だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは　それは<br><br>だからもっと踊るように<br><br>あぁ僕らずっと一つじゃないの<br><br>涙拭けば雨のように<br><br>それは夏の木漏れ日のよう<br><br>木漏れ日のよう | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa sore wa<br><br>Dakara motto odoru you ni<br><br>Aa bokura zutto hitotsu janai no<br><br>Namida fukeba ame no you ni<br><br>Sore wa natsu no komorebi no you<br><br>Komorebi no you<br> | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>That is... That is...<br><br>So we can dance more<br><br>Aah, we'll always be one, won't we?<br><br>If you wipe away your tears, it'll be like the rain<br><br>It's just like the summer sun filtering through the trees<br><br>Just like the sun filtering through the trees | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Điều đó…<br><br>Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Ôi, chúng ta mãi không bao giờ là một<br><br>Lau đi nước mắt trời như đổ mưa<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè<br><br>Như tia nắng xuyên qua kẽ lá         |
-| 貴方の中には何があるのかい<br><br>僕の心には何を描くのかい<br><br>少しだけ歩こうか　雨の降る間に<br><br>その後ろ姿もしぐれてゆくか                                                                                  | Anata no naka ni wa nani ga aru no kai<br><br>Boku no kokoro ni wa nani wo kaku no kai<br><br>Sukoshi dake arukou ka ame no furu ma ni<br><br>Sono ushiro sugata mo shigurete yuku ka                                                                                                                 | What do you have inside?<br><br>What do you imagine is in my heart?<br><br>Why don't we walk a little, while it's raining<br><br>Will the person I'm behind fade too?                                                                                                                                                                                                    | Bên trong em đang cất chứa điều gì đây<br><br>Còn trái tim anh đang vẽ điều gì đây<br><br>Hay ta đi dạo chút nhé, khi trời còn đang mưa<br><br>Bóng lưng ấy cũng dần đổ lệ theo mưa                                                                                                                                                                                  |
-| 忘れることが苦しい、それも正しいのでしょう                                                                                                                                          | Wasureru koto ga kurushii, sore mo tadashii no deshou                                                                                                                                                                                                                                                 | It hurts to forget, that must also be true, no?                                                                                                                                                                                                                                                                                                                          | Quên đi thật đau khổ, điều đó cũng đúng phải không em?                                                                                                                                                                                                                                                                                                               |
-| 言葉もっと遊ぶように<br><br>ほろりほろり落ちる夕陽<br><br>五月雨が花火のように<br><br>それは　それは<br><br>去ればぱっと晴れる陽気<br><br>あなたを待っている、火のように<br><br>燃える雲、茜のように<br><br>それは風のお祭りのよう                  | Kotoba motto asobu you ni<br><br>Horori horori ochiru yuuhi<br><br>Samidare ga hanabi no you ni<br><br>Sore wa sore wa<br><br>Sareba patto hareru youki<br><br>Anata wo matteiru, hi no you ni<br><br>Moeru kumo, akane no you ni<br><br>Sore wa kaze no omatsuri no you                              | So that we can toss about words some more<br><br>Sinking like the setting sun<br><br>The rain in May is a lot like fireworks<br><br>That is... that is...<br><br>When you leave, the weather will suddenly clear up<br><br>I'm waiting for you, it's like a fire<br><br>Like clouds burning madder red<br><br>It's like a festival of the wind                           | Hãy chơi đùa với câu từ nhiều hơn đi<br><br>Ông mặt trời đang thong dong đi xuống<br><br>Cơn mưa tháng năm như pháo hoa nở<br><br>Điều đó…<br><br>Mưa qua đi mặt trời bừng sáng<br><br>Như ngọn lửa đang chờ đợi em<br><br>Đám mây cháy rực như hoàng hôn đỏ<br><br>Tất cả như lễ hội của gió vậy                                                                    |
-| あの日の空を思う胸が苦しいのでしょう                                                                                                                                             | Ano hi no sora wo omou mune ga kurushii no deshou                                                                                                                                                                                                                                                     | It seems thinking about the sky that day will still hurt in my chest                                                                                                                                                                                                                                                                                                     | Trái tim em nghĩ về bầu trời hôm đó chắc hẳn đau buồn lắm.                                                                                                                                                                                                                                                                                                           |
-| だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは　それは<br><br>だからもっと踊るように<br><br>あぁ僕らずっと一つじゃないの<br><br>涙吹けば雨模様に<br><br>それは夏の木漏れ日のよう<br><br>木漏れ日のよう  | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa sore wa<br><br>Dakara motto odoru you ni<br><br>Aa bokura zutto hitotsu janai no<br><br>Namida fukeba ame moyou ni<br><br>Sore wa natsu no komorebi no you<br><br>Komorebi no you      | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>That is... That is...<br><br>So we can dance more<br><br>Aah, we'll always be one, won't we?<br><br>If I spout my tears, it'll threaten to rain<br><br>It's just like the summer sun filtering through the trees<br><br>Just like the sun filtering through the trees         | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Điều đó…<br><br><br>Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Ôi, chúng ta mãi không bao giờ là một<br><br>Lau đi nước mắt trời lại rì rầm mưa<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè<br><br>Như tia nắng xuyên qua kẽ lá |
+| Japanese                                                                                                                                                       | Romanji                                                                                                                                                                                                                                                                                               | [SakuraWindsS](https://docs.google.com/document/d/1NArzwf94kimzr371iZBPELcmeJYdaRRXOLm2Sw83VWQ/)                                                                                                                                                                                                                                                                         | [pikapika](https://pikapikahome274868890.wordpress.com/yorushika-vietsub/gentou/)                                                                                                                                                                                                                                                                                |
+| -------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは夏の木漏れ日のよう                                                                                         | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa natsu no komorebi no you                                                                                                                                                               | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>It's like the summer sunlight filtering through the leaves                                                                                                                                                                                                                    | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè                                                                                                                                                                                          |
+| 寂しい雨上がり、花を見つけて<br><br>ぽっかり空いたような貴方の心<br><br>少しだけ歩こうか　風の吹く間に<br><br>草のそよげば何となく誰かを待つ                                                                             | Sabishii ameagari, hana wo mitsukete<br><br>Pokkari aita you na anata no kokoro<br><br>Sukoshi dake arukou ka kaze no fuku ma ni<br><br>Kusa no soyogeba nanto naku dareka wo matsu                                                                                                                   | After a lonely rain, finding a flower<br><br>Your heart is completely empty<br><br>Why don't we walk a little, the wind blows all the while<br><br>While the grass sways, for some reason I'm waiting for someone                                                                                                                                                        | Sau cơn mưa buồn thinh, em tìm thấy một bông hoa<br><br>Trái tim em trống vắng như thủng một lỗ<br><br>Hay ta đi dạo một chút khi gió đang thổi nhé?<br><br>Đồng cỏ lao xao như đang chờ đợi ai đó                                                                                                                                                               |
+| 忘れるたびに増やすことが悲しいのでしょう                                                                                                                                           | Wasureru tabi ni fuyasu koto ga kanashii no deshou                                                                                                                                                                                                                                                    | The ever-increasing amount of things you forget must be sad right?                                                                                                                                                                                                                                                                                                       | Mỗi lần quên đi chỉ có nỗi buồn là tăng lên, đúng không em?                                                                                                                                                                                                                                                                                                      |
+| だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは　それは<br><br>だからもっと踊るように<br><br>あぁ僕らずっと一つじゃないの<br><br>涙拭けば雨のように<br><br>それは夏の木漏れ日のよう<br><br>木漏れ日のよう | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa sore wa<br><br>Dakara motto odoru you ni<br><br>Aa bokura zutto hitotsu janai no<br><br>Namida fukeba ame no you ni<br><br>Sore wa natsu no komorebi no you<br><br>Komorebi no you<br> | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>That is... That is...<br><br>So we can dance more<br><br>Aah, we'll always be one, won't we?<br><br>If you wipe away your tears, it'll be like the rain<br><br>It's just like the summer sun filtering through the trees<br><br>Just like the sun filtering through the trees | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Điều đó…<br><br>Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Ôi, chúng ta mãi không bao giờ là một<br><br>Lau đi nước mắt trời như đổ mưa<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè<br><br>Như tia nắng xuyên qua kẽ lá     |
+| 貴方の中には何があるのかい<br><br>僕の心には何を描くのかい<br><br>少しだけ歩こうか　雨の降る間に<br><br>その後ろ姿もしぐれてゆくか                                                                                  | Anata no naka ni wa nani ga aru no kai<br><br>Boku no kokoro ni wa nani wo kaku no kai<br><br>Sukoshi dake arukou ka ame no furu ma ni<br><br>Sono ushiro sugata mo shigurete yuku ka                                                                                                                 | What do you have inside?<br><br>What do you imagine is in my heart?<br><br>Why don't we walk a little, while it's raining<br><br>Will the person I'm behind fade too?                                                                                                                                                                                                    | Bên trong em đang cất chứa điều gì đây<br><br>Còn trái tim anh đang vẽ điều gì đây<br><br>Hay ta đi dạo chút nhé, khi trời còn đang mưa<br><br>Bóng lưng ấy cũng dần đổ lệ theo mưa                                                                                                                                                                              |
+| 忘れることが苦しい、それも正しいのでしょう                                                                                                                                          | Wasureru koto ga kurushii, sore mo tadashii no deshou                                                                                                                                                                                                                                                 | It hurts to forget, that must also be true, no?                                                                                                                                                                                                                                                                                                                          | Quên đi thật đau khổ, điều đó cũng đúng phải không em?                                                                                                                                                                                                                                                                                                           |
+| 言葉もっと遊ぶように<br><br>ほろりほろり落ちる夕陽<br><br>五月雨が花火のように<br><br>それは　それは<br><br>去ればぱっと晴れる陽気<br><br>あなたを待っている、火のように<br><br>燃える雲、茜のように<br><br>それは風のお祭りのよう                  | Kotoba motto asobu you ni<br><br>Horori horori ochiru yuuhi<br><br>Samidare ga hanabi no you ni<br><br>Sore wa sore wa<br><br>Sareba patto hareru youki<br><br>Anata wo matteiru, hi no you ni<br><br>Moeru kumo, akane no you ni<br><br>Sore wa kaze no omatsuri no you                              | So that we can toss about words some more<br><br>Sinking like the setting sun<br><br>The rain in May is a lot like fireworks<br><br>That is... that is...<br><br>When you leave, the weather will suddenly clear up<br><br>I'm waiting for you, it's like a fire<br><br>Like clouds burning madder red<br><br>It's like a festival of the wind                           | Hãy chơi đùa với câu từ nhiều hơn đi<br><br>Ông mặt trời đang thong dong đi xuống<br><br>Cơn mưa tháng năm như pháo hoa nở<br><br>Điều đó…<br><br>Mưa qua đi mặt trời bừng sáng<br><br>Như ngọn lửa đang chờ đợi em<br><br>Đám mây cháy rực như hoàng hôn đỏ<br><br>Tất cả như lễ hội của gió vậy                                                                |
+| あの日の空を思う胸が苦しいのでしょう                                                                                                                                             | Ano hi no sora wo omou mune ga kurushii no deshou                                                                                                                                                                                                                                                     | It seems thinking about the sky that day will still hurt in my chest                                                                                                                                                                                                                                                                                                     | Trái tim em nghĩ về bầu trời hôm đó chắc hẳn đau buồn lắm.                                                                                                                                                                                                                                                                                                       |
+| だからもっと踊るように<br><br>ほろりほろり落ちるように<br><br>さよならは花咲くように<br><br>それは　それは<br><br>だからもっと踊るように<br><br>あぁ僕らずっと一つじゃないの<br><br>涙吹けば雨模様に<br><br>それは夏の木漏れ日のよう<br><br>木漏れ日のよう  | Dakara motto odoru you ni<br><br>Horori horori ochiru you ni<br><br>Sayonara wa hanasaku you ni<br><br>Sore wa sore wa<br><br>Dakara motto odoru you ni<br><br>Aa bokura zutto hitotsu janai no<br><br>Namida fukeba ame moyou ni<br><br>Sore wa natsu no komorebi no you<br><br>Komorebi no you      | So we can dance more<br><br>Falling like petals<br><br>Goodbye blooms like a flower<br><br>That is... That is...<br><br>So we can dance more<br><br>Aah, we'll always be one, won't we?<br><br>If I spout my tears, it'll threaten to rain<br><br>It's just like the summer sun filtering through the trees<br><br>Just like the sun filtering through the trees         | Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Nước mắt rơi lã chã cũng không sao<br><br>Lời tạm biệt nói ra như hoa nở<br><br>Điều đó…<br><br>Vậy nên hãy nhảy múa nhiều hơn nữa đi<br><br>Ôi, chúng ta mãi không bao giờ là một<br><br>Lau đi nước mắt trời lại rì rầm mưa<br><br>Thật giống tia nắng xuyên qua kẽ lá mùa hè<br><br>Như tia nắng xuyên qua kẽ lá |
 ##### Notes
 >This song is inspired by “草木塔 | Plants Tower” by Santoka Taneda.
 
