--- a/(2019) That's Why I Gave Up On Music/06. Let's Dance.md
+++ b/(2019) That's Why I Gave Up On Music/06. Let's Dance.md
@@ -7,7 +7,7 @@ await dv.view('_script');
 | Japanese                                                                                                                          | Romanji                                                                                                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/05/12/yorushika-odorou-ze/)                                                                                                                                                                                                                     | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                                                                             |
 | --------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | 嗚呼、透明よりも澄み切った心で<br><br>世の中を笑っているんだよ<br><br>嗚呼、音楽なんかを選んだ<br><br>あの日の自分を馬鹿に思うね                                                      | aa, toumei yori mo sumikitta kokoro de<br><br>yo no naka o waratte iru n’da yo<br><br>aa, ongaku nanka o eranda<br><br>ano hi no jibun o baka ni omou ne                                                                                                             | Ah, with a heart that’s clearer than transparent,<br><br>I’m laughing at the world<br><br>Ah, thinking back to when I chose music<br><br>I feel I was such an idiot then                                                                                                                                   | Ah, tớ đang cười vào sự đời, bằng một trái tim trong suốt hơn cả xuyên thấu<br><br>Ah, tớ thấy bản thân tớ thật ngu ngốc, khi ngày đó đã lựa chọn âm nhạc                                                                                                                                  |
-| 伝えたい全部はもう<br><br>この詩も自分の声すらも                                                                                                      | tsutaetai zenbu wa mou<br><br>kono uta mo jibun no koe sura mo                                                                                                                                                                                                       | Everything I want to tell you–<br><br>This song, even my voice–                                                                                                                                                                                                                                            | Tất cả những điều tớ muốn nói, cả bài hát này, cả bản thân tớ và cẩ giọng nói này                                                                                                                                                                                                          |
+| 伝えたい全部はもう<br><br>この詩も自分の声すらも                                                                                                      | tsutaetai zenbu wa mou<br><br>kono uta mo jibun no koe sura mo                                                                                                                                                                                                       | Everything I want to tell you–<br><br>This song, even my voice–                                                                                                                                                                                                                                            | Tất cả những điều tớ muốn nói, cả bài hát này, cả bản thân tớ và cả giọng nói này                                                                                                                                                                                                          |
 | 風になったから　泡と消えていったから<br><br>共感覚みたいこの感傷は何処かへ投げ捨てたい<br><br>僕でいいのなら　君が知りたいのなら<br><br>もう隠すことなんてないよ<br><br>今から少しだけ踊ろうぜ                   | kaze ni natta kara awa to kiete itta kara<br><br>kyoukankaku mitai kono kanshou wa dokoka e nagesutetai<br><br>boku de ii no nara kimi ga shiritai no nara<br><br>mou kakusu koto nante nai yo<br><br>ima kara sukoshi dake odorou ze                                | Has turned into the wind and vanished with the bubbles<br><br>So I want to throw away this synesthesia-like sentiment<br><br>If it’s okay for me to do this, if you want to know,<br><br>I won’t hide anything anymore<br><br>From now on I’ll dance just a little                                         | Đều đã biến thành gió, tan đi cùng bọt biển<br><br>Cái tính tự mình đa cảm mà tớ gọi là sự đồng cảm này, thật muốn ném quách đi đâu đó<br><br>Nếu cậu chấp nhận tớ, nếu cậu muốn biết về tớ, thì tớ sẽ không trốn tránh nữa<br><br>Giờ đây tớ sẽ nhảy múa cho cậu xem.                     |
 | 嗚呼、人間なんて辞めたいな<br><br>そうだろ、面白くも何にもないだろ<br><br>嗚呼、自慢のギターを見せびらかした<br><br>あの日の自分を潰してやりたいよ                                             | aa, ningen nante yametai na<br><br>sou daro, omoshiroku mo nani mo nai daro<br><br>aa, jiman no GITAA o misebirakashita<br><br>ano hi no jibun o tsubushite yaritai yo                                                                                               | Ah, I want to give up on being human<br><br>That’s right, nothing holds any interest for me anymore<br><br>Ah, thinking back on when I showed off that guitar I was so proud of<br><br>I want to crush the person I was back then                                                                          | Ah, tớ chẳng còn muốn làm người nữa<br><br>Đúng không, chẳng có cái gì hay ho cả<br><br>Ah, tớ muốn phá huỷ bản thân tớ <br><br>Khi ngày đó đã khoe khoang cây ghita mình tự mãn                                                                                                           |
 | 伝えたい全部はもう<br><br>夏も冬も明日の向こう側で                                                                                                     | tsutaetai zenbu wa mou<br><br>natsu mo fuyu mo asu no mukougawa de                                                                                                                                                                                                   | Everything I want to tell you–<br><br>The summer, the winter — beyond tomorrow                                                                                                                                                                                                                             | Vì tất cả những điều tớ muốn nói, cả mùa hè và mùa đông, cả rìa bên kia của ngày mai                                                                                                                                                                                                       |
