--- a/(2020) Plagiarism/03. Prostitution.md
+++ b/(2020) Plagiarism/03. Prostitution.md
@@ -6,7 +6,7 @@ await dv.view('_script');
 
 | Japanese                                                                                                        | Romanji                                                                                                                                                                                                                               | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                   | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^5]]                                                                                                                                                                                                                                                   |
 | --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 大丈夫だよ大丈夫<br><br>寝てれば何とかなるし<br><br>どうしたんだいそんな顔してさぁ<br><br>別にどうともないよ                                              | Daijōbu da yo daijōbu<br><br>Netereba nantoka naru shi<br><br>Dō shita n dai sonna kao shite saa<br><br>Betsuni dō to mo nai yo                                                                                                       | Everything's ok, it's fine<br><br>If you sleep it'll work itself out, so<br><br>What's up with you making that face, hey<br><br>It's nothing special you know                                                                                                                                                               | Không sao đâu, mọi thứu sẽ ổn thôi<br><br>Ngủ một giấc là đâu sẽ có đó<br><br>"Cô làm sao thế, trông mặt lại thế kia?"<br><br>"Không, chẳng có vấn đề gì to tát hết!"                                                                                                                                                           |
+| 大丈夫だよ大丈夫<br><br>寝てれば何とかなるし<br><br>どうしたんだいそんな顔してさぁ<br><br>別にどうともないよ                                              | Daijōbu da yo daijōbu<br><br>Netereba nantoka naru shi<br><br>Dō shita n dai sonna kao shite saa<br><br>Betsuni dō to mo nai yo                                                                                                       | Everything's ok, it's fine<br><br>If you sleep it'll work itself out, so<br><br>What's up with you making that face, hey<br><br>It's nothing special you know                                                                                                                                                               | Không sao đâu, mọi thứ sẽ ổn thôi<br><br>Ngủ một giấc là đâu sẽ có đó<br><br>"Cô làm sao thế, trông mặt lại thế kia?"<br><br>"Không, chẳng có vấn đề gì to tát hết!"                                                                                                                                                            |
 | 駅前で愛を待ち惚け<br><br>他にすることもないし<br><br>不誠実の価値も教えてほしいわ                                                               | Ekimae de ai wo machibōke<br><br>Hoka ni suru koto mo nai shi<br><br>Fuseijitsu no kachi mo oshiete hoshii wa                                                                                                                         | Waiting in vain for love in front of the station<br><br>I got nothing better to do anyway<br><br>I wanna be taught the value of insincerity as well                                                                                                                                                                         | Ta đứng trước nhà ga ngóng đợi tình yêu<br><br>Dù sao cũng chẳng có chuyện gì khác để làm cả<br><br>Ngài hãy nói cho ta biết giá trị của sự giả dối đi!                                                                                                                                                                         |
 | 言勿れ　愛など忘れておくんなまし<br><br>苦しい事だって何でも教えておくれ<br><br>左様な蜻蛉の一つが善いなら忘れた方が増し<br><br>詮の無いことばかり聞いてられないわ<br><br>言いたくないわ    | Kotonakare ai nado wasureteoku n namashi<br><br>Kurushii koto datte nan demo oshiete okure<br><br>Sayōna kagerou no hitotsu ga ii nara wasureta hō ga mashi<br><br>Sen no nai koto bakari kiiterarenai wa<br><br>Iitakunai wa         | Say no more [[#^1]], release yourself from the bonds of love [[#^2]]<br><br>Let me know about anything, even if it's something painful<br><br>If one mayfly such as that should suffice, I would have rather forgotten it [[#^3]]<br><br>I can't just listen to worthless things all the time<br><br>I don't want to say it | Đừng nói về dăm ba cái tình yêu nữa, hãy quên nó đi!<br><br>Hãy cho ta biết mọi thứ, dẫu có là điều khiến ngài đau khổ đi chăng nữa<br><br>Nếu người đời không mảy may đến một con phù du như thế, vậy thì thà quên nó đi còn hơn<br><br>Ta không thể nào nghe mãi những điều vô ích đó được<br><br>Ta không muốn nói về nó đâu |
 | 大丈夫どれだけも吐いても<br><br>言葉は言い足りないし<br><br>どうしたんだいあんたにわかるかい<br><br>この憂いが                                             | Daijōbu dore dake mo haite mo<br><br>Kotoba wa ii tarinai shi<br><br>Dō shita n dai anta ni wakaru kai<br><br>Kono urei ga                                                                                                            | It's fine, no matter how much you spit it up<br><br>There won't be enough words to say, so<br><br>What's up with you, do you even get it<br><br>This anguish, that is                                                                                                                                                       | Không sao đâu, vì dù ta có thổ lộ bao nhiêu đi chăng nữa<br><br>Ta sẽ chẳng bao giờ nói hết được lòng mình<br><br>"Ta làm sao thế này? Ngài liệu có thể hiểu được không?"<br><br>"Nỗi đau dày xé trong ta"                                                                                                                      |
@@ -15,6 +15,8 @@ await dv.view('_script');
 | 陽炎や　今日などいつか忘れてしまうのでしょう？苦しいの<br><br>左様な躊躇いの一つが愛なら知らない方が増し<br><br>詮の無いことだって聞かせてもっと                                | Kagerō ya kyō nado itsuka wasureteshimau no deshō? kurushii no<br><br>Sayōna tamerai no hitotsu ga ai nara shiranai hō ga mashi<br><br>Sen no nai koto datte kikasete motto                                                           | Will I one day forget about things like today and the heat haze? It's painful<br><br>If a moment of hesitation such as that is love, then I would rather not know of it<br><br>Tell me worthless things, more                                                                                                               | Hơi nóng của mùa hè và ngày hôm nay, một ngày nào đó ta sẽ quên mất sao?<br>Thật là đau đớn mà<br><br>Nếu sự ngập ngừng đó người ta gọi là "tình yêu", vậy thì ta thà không biết còn hơn!<br><br>Hãy kể thêm về những điều tưởng như vô ích nữa đi!                                                                             |
 | 言勿れ　明日など忘れておくんなまし<br><br>苦しい事だって何度も教えておくれ<br><br>無粋な蜻蛉の一つでいいから、溺れるほどに欲しい<br><br>詮の無いことだって聞かせてもっと<br><br>愛して欲しいわ | Kotonakare asu nado wasureteoku n namashi<br><br>Kurushii koto datte nandomo oshiete okure<br><br>Busuina kagerou no hitotsu de ii kara, oboreru hodo ni hoshii<br><br>Sen no nai koto datte kikasete motto<br><br>Aishite hoshii wa  | Say no more, release yourself from the bonds of tomorrow<br><br>Let me know about the painful things over and over<br><br>One boorish mayfly is enough ok, I'm drowning in how much I need it<br><br>Tell me worthless things, more<br><br>I want to love                                                                   | Đừng nói về ngày mai nữa, hay quên nó đi!<br><br>Ta muốn nghe nhiều hơn dẫu cho đó có là những thứ khiến ngài đau khổ!<br><br>Dẫu đó chỉ là một con phù du thô kệch đi nữa<br>Ôi ta ao ước đến vô ngần<br><br>Hãy kể thêm về những điều tưởng như vô ích nữa đi!<br><br>Ta cũng muốn được yêu thương                            |
 ##### Notes
+> when a line ends in “wa”, it is from the feminine perspective
+
 >The official translation is “Prostitution”, and that’s absolutely correct, but the phrase used is a euphemistic and archaic way of saying it which doesn’t make it nearly as obvious as simply “prostitution”. I tried to find an English equivalent and failed, so it stays “Spring Selling” for me. ^title
 
 >The written phrase is 言勿れ which is indeed "Say no more", but there’s a spoken phrase with the same pronunciation which means something like "Don't rock the boat". This refers to the Plagiarist's mindset here. ^1
